--- a/.github/workflows/jekyll-docker.yml
+++ b/.github/workflows/jekyll-docker.yml
@@ -1,12 +1,14 @@
+# .github/workflows/blank.yml
+
 name: ShellCheck
 
 on:
   push:
     paths:
-      - '**/*.sh'  # 改成这样，确保匹配子目录下的所有 .sh 文件
+      - '**.sh'
   pull_request:
     paths:
-      - '**/*.sh'
+      - '**.sh'
 
 jobs:
   shellcheck:
